app/static/css/style.css
* {
   margin: 0px;
   padding: 0px;
}

html, body {
   height: 100%;
}

.swal-text {
  text-align: center!important;
}

.se-pre-con {
	position: fixed;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	z-index: 9999;
   background-size: 5%!important;
	background: url('https://media.giphy.com/media/GwbpFP7ovm4Pm/giphy.gif') center no-repeat #fff;
}

body {
   background: url(../assets/sky.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  /* font-family: 'PT Sans', sans-serif; */
}

.main-page {
  margin-top: 12%;
}

/* .info {
  margin-top: 10%;
}

.sign-up {
   margin-top: 15%;
} */

.info h1 {
   font-weight: bold;
   font-size: 45px;
}

.forms-container {
   padding: 20px 20px 25px 20px;
   border: 1px solid #eaeaea;
   background-color: #fff;
   border-radius: 7px;
   box-shadow: 0 3px 14px rgba(0,0,0,0.25), 0 9px 5px rgba(0,0,0,0.22);
   margin-bottom: 30px;
}

.form-control:focus {
  /* border-color: #FF0000; */
  border-width: 1px;
  box-shadow: none;
}

.password-cont {
   margin-bottom: .5rem;
}

.sign-in-err, .validationMessage, .username-err, .match-pass-err, .email-err {
   margin-bottom: .5rem;
   color: red;
   font-size: 14px;
   /* font-weight: bold; */
   text-align: left;
}

#sign-up {
   display: none;
}

#sign-in h2, #sign-up h2 {
   margin-top: 10px;
   margin-bottom: 20px;
}

.form-title {
   text-align: center;
   font-weight: bold;
}

